--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "engines": {
+    "node": "12.22.6"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
